# CMakeInitializer

./: CMakeLists.txt  README.md  build.sh  cmake-pm  run.sh
app/: CMakeLists.txt  app.cpp
docs/: mainpage.md
example/: .gitignore  CMakeLists.txt  cmake-pm
example/app/: CMakeLists.txt  app.cpp
example/docs/: CMakeLists.txt  mainpage.md
example/include/header-only/: header-only.h
example/scripts/: macros.cmake
example/src/: CMakeLists.txt
example/src/example_lib/: CMakeLists.txt  example_lib.cpp
example/src/header-only/: CMakeLists.txt
example/test/: CMakeLists.txt  exampletest.cpp  main.cpp
example_project/: CMakeLists.txt  cmake-pm
example_project/docs/: mainpage.md
include/CMakeInitializer/: CMakeInitializer.h  Errors.h  FileContents.h
src/: main.cpp
src/CMakeInitializer/: CMakeInitializer.cpp  CMakeLists.txt
test/: add.cpp
